--- a/personenkonst/src/Front.css
+++ b/personenkonst/src/Front.css
@@ -1,17 +1,20 @@
-h1{
+.title{
     text-align: center;
     padding-top: 3%;
     font-size: 40px;
-    padding-bottom: 5%;
+    padding-bottom: 7%;
+
 }
 
 #beitreten {
     margin-left: 80px;
 }
+
 #erstellen, #beitreten{
     background-color: #afcfd5;
     padding: 50px;
     box-shadow: rgba(139, 206, 190, 0.65) 5px 5px, rgba(136, 236, 206, 0.72) 10px 10px, rgba(58, 192, 161, 0.75) 15px 15px, rgba(67, 145, 136, 0.62) 20px 20px, rgba(202, 243, 233, 0.05) -25px 25px;
+
 }
 
 label{
@@ -20,8 +23,8 @@ label{
 
 h3{
     font-size: 30px;
-
 }
+
 
 .container {
     display: flex;
@@ -35,6 +38,7 @@ button {
     background: #111;
     cursor: pointer;
     position: relative;
+    margin-right: 10%;
     border-radius: 10px;
 }
 
