--- a/personenkonst/src/Front.css
+++ b/personenkonst/src/Front.css
@@ -1,46 +1,68 @@
+body,html {height:100%;overflow:hidden;}
+body {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(to bottom, #36489d 0%, #a1a3be 80%);
+}
 .title{
-    text-align: center;
-    padding-top: 3%;
-    font-size: 40px;
-    padding-bottom: 7%;
+  text-align: center;
+  font-size: 70px;
+  color: #fde9ff;
+  font-weight: 800;
+  text-transform: uppercase;
+  font-size: clamp(3rem, 10vw, 6rem);
+  line-height: 0.75em;
+  text-align: center;
+  text-shadow: 3px 1px 1px #023d3d, 2px 2px 1px #023d3d, 4px 2px 1px #023d3d,
+  3px 3px 1px #131313, 5px 3px 1px #fcfdfd, 4px 4px 1px #070707;
 
 }
 
-#beitreten {
-    margin-left: 80px;
+h1 {
+  font-size: 8vw;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1;
 }
+
+
+
 
 #erstellen, #beitreten{
-    background-color: #afcfd5;
-    padding: 50px;
-    box-shadow: rgba(139, 206, 190, 0.65) 5px 5px, rgba(136, 236, 206, 0.72) 10px 10px, rgba(58, 192, 161, 0.75) 15px 15px, rgba(67, 145, 136, 0.62) 20px 20px, rgba(202, 243, 233, 0.05) -25px 25px;
-
+  margin-top: 40%;
+  margin-left: 80px;
+  background-color: #afcfd5;
+  padding: 50px;
+  box-shadow: rgba(139, 206, 190, 0.65) 5px 5px, rgba(136, 236, 206, 0.72) 10px 10px, rgba(58, 192, 161, 0.75) 15px 15px, rgba(67, 145, 136, 0.62) 20px 20px, rgba(202, 243, 233, 0.05) -25px 25px;
 }
 
 label{
-    font-size: 20px;
+  font-size: 20px;
+}
+
+.container, section {
+  display: flex;
+  justify-content: center;
+
 }
 
 h3{
-    font-size: 30px;
-}
-
-
-.container {
-    display: flex;
-    justify-content: center;
+  font-size: 30px;
 }
 
 button {
-    padding: 0.6em 2em;
-    border: none;
-    color: rgb(255, 255, 255);
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    margin-right: 10%;
-    border-radius: 10px;
+  padding: 0.6em 2em;
+  border: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  margin-right: 10%;
+  border-radius: 10px;
 }
+
+
+
 
 
 
